fixed windows chrome / ei layout problem with vw units

--- a/src/scss/molecules/feed.scss
+++ b/src/scss/molecules/feed.scss
@@ -13,8 +13,8 @@
 	line-height: 1.5;
 
 	&-item {
-		width: calc((100vw / 3) - 2px);
-		height: calc((100vw / 3) - 2px);
+		width: calc((100% / 3) - .2rem);
+		height: calc((100vw / 3) - .2rem);
 		margin-bottom: var(--insta-base-spacing);
 
 		&:nth-child(3n+2) {
@@ -29,7 +29,7 @@
 		};
 
 		@include media (medium) {
-            width: calc((100vw / 4) - .225rem);
+            width: calc((100% / 4) - .225rem);
 			height: calc((100vw / 4) - .225rem);
 			margin-left: var(--insta-base-spacing);
 
@@ -47,7 +47,7 @@
         }
 
         @include media (large) {
-            width: calc((100vw / 6) - .25rem);
+            width: calc((100% / 6) - .25rem);
 			height: calc((100vw / 6) - .25rem);
 			margin: {
 				right: 0;
